feat: compatible with codeql and fix dbscheme